--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -9,6 +9,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="manifest" href="manifest.json" />
 
   <title>Budget Tracker</title>
 </head>
@@ -41,7 +42,25 @@
     <canvas id="myChart"></canvas>
   </div>
 
+  <script type="text/javascript">
+    (function() {
+      if("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./service-worker.js", {
+          scope: "/"
+        })
+          .then((res) => {
+            console.log(res);
+            console.log("Service Worker registered successfully.");
+          })
+          .catch(error => console.log("Service Worker registration failed:", error));
+      }
+    })();
+  </script>
+
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="db.js"></script>
   <script src="index.js"></script>
+  
+
 </body>
 </html>
